# US-VISA-APPROVAL-PREDICTION-MLOPS

./: LICENSE  README.md  demo.py  main.py  pyproject.toml  setup.py  template.py
notebook/: 1_EDA_US_VISA.ipynb  2_Feature_Engineering_and_Model_Training.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
