[project]
name = "us-visa-approval-prediction-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.35",
    "botocore>=1.40.35",
    "catboost>=1.2.8",
    "dill>=0.4.0",
    "evidently==0.2.8",
    "fastapi>=0.117.1",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "mypy-boto3-s3>=1.40.26",
    "neuro-mf>=0.0.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pymongo>=4.15.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.36.0",
    "xgboost>=3.0.5",
]
